# pyresiflex

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  coverage.xml  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: on-push.yml  publish.yml  tests-cov.yml
docs/: bibliography.rst  conf.py  index.md  installation.md  prepare_docs.py
examples/: README.rst
examples/article_figures/: README.rst  create_momentum_transfert_frequency.py  plot_cross_sections_Minesi2022.py  plot_determine_Minesi2022_parameters.py  plot_determining_Minesi2022_cable_properties.py  plot_electrical_length.py  plot_get_electron_density_from_Minesi2022_experiments.py  plot_plasma_resistance_from_Minesi2022_experiments.py  plot_plasma_resistance_sensibility_analysis.py  plot_plasma_resistance_sensitivity_analysis.py  plot_reproduce_Minesi2022_experiment.py  plot_reproduce_Pavan2024_numerical_simulation.py  plot_reproduce_PerrinTerrin2025_experiment.py
examples/complex_impedance/: README.rst  plot_LRC_case.py  plot_no_breakdown.py
examples/others/: README.rst  plot_cable_length_influence.py  plot_constant_resistance.py  smallest_example.py
examples/pure_resistance_impedance/: README.rst  plot_animation_of_pulse.py  plot_reproduce_Minesi2022_experiment_manually.py
examples/reconstructing_plasma_resistance/: README.rst  plot_reconstructing_resistance_purely_resistive_load.py
figures/: .gitignore
src/pyresiflex/cable/: cable.py
src/pyresiflex/data/: article_one_column_figure.mplstyle  article_two_columns_figure.mplstyle
src/pyresiflex/data/Minesi2022/: cable_properties.yaml  fig16_remoteConfiguration.csv  fig3_anodeConfiguration.csv
src/pyresiflex/data/Minesi2022/cross_sections/: .gitignore  bolsig.ini  run_bolsig.py
src/pyresiflex/data/Pavan2025/Fig8/: current_Load_A.csv  current_Load_B.csv  current_Load_C.csv  current_Load_D.csv  energy_Load_A.csv  energy_Load_B.csv  energy_Load_C.csv  energy_Load_D.csv  voltage_Load_A.csv  voltage_Load_B.csv  voltage_Load_C.csv  voltage_Load_D.csv
src/pyresiflex/data/PerrinTerrin2025/: C1run_6_V_13kV_frep_20kHz_Pth_50kW_Qair_55p5per_alpha_40__0020_0.csv
src/pyresiflex/data/cross_sections/: README
src/pyresiflex/data/cross_sections/Bolsig/: bolsig.ini
src/pyresiflex/data/cross_sections/CO/: ISTLisbon.txt  Itikiwa.txt
src/pyresiflex/data/cross_sections/CO2/: Biagi.txt  (+3 more)
src/pyresiflex/experiment/: purely_resistive_experiment.py
src/pyresiflex/generator/: base_generator.py  generator_complex_impedance.py  generator_real_impedance.py
src/pyresiflex/load/: base_load.py  steady_impedance.py  time_varying_resistance.py
src/pyresiflex/misc/: load_data.py  plot.py  read_lxcat_cross_section.py  units.py  utils.py
src/pyresiflex/solver/: base_solution.py  purely_resistive_solution.py  steady_impedance_solution.py
tests/: conftest.py  helpers.py
tests/cable/: test_cable.py
tests/experiment/: test_purely_resistive_experiment.py  test_reconstructing_resistance_purely_resistive_load.py
tests/generator/: test_base_generator.py  test_generator_complex_impedance.py  test_generator_real_impedance.py
tests/load/: test_base_load.py  test_steady_impedance.py  test_time_varying_resistance.py
tests/misc/: load_data.py  test_load_data.py  test_plot.py  test_read_lxcat_cross_section.py  test_units.py  test_utils.py
tests/physics/: test_transmission_line.py
tests/solver/: test_base_solution.py  test_steady_impedance_solution.py
(+36 files in other folders)
